feat: added the ability to identify the speaker based on their voice signature so the assistant can address the individual and context on their queries

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 .env
+realtimesst.log
+voice_signatures.json
+voice_recordings/*
+__pycache__/assist.cpython-313.pyc
+__pycache__/spot.cpython-313.pyc
+__pycache__/tools.cpython-313.pyc
