--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ spotipy
 --extra-index-url https://download.pytorch.org/whl/cu116
 torch
 git+https://github.com/openai/whisper.git
+pyannote.audio
+numpy
+scipy
+soundfile
+librosa
+scikit-learn
