--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 realtimesst.log
 voice_signatures.json
 voice_recordings/*
-__pycache__/assist.cpython-313.pyc
-__pycache__/spot.cpython-313.pyc
-__pycache__/tools.cpython-313.pyc
+__pycache__/*
+./venv/*
+.DS_Store
+./models/*
+*.pth
