--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,10 @@ scipy
 soundfile
 librosa
 scikit-learn
+# CSM TTS dependencies
+transformers>=4.53.0
+huggingface_hub
+accelerate
+datasets
+# Kyutai STT dependencies (requires transformers >= 4.53.0)
+# Note: The Kyutai model requires the latest transformers version
